Version history of the R genetic analysis package (R/gap)

Version 1.2.3-2
31-05-2021	Add shinygap
		Rename h2 to h2_mzdz to resolve conflict with shiny/htmltools
		Update mhtplot3d and rename old version as run3d to use .csv rather than .tsv
		Replace gap.Rnw with gap.Rmd
		Move plogp.Rmd and functions.Rmd here from pQTLtools and merge into gap.Rmd
		Drop fig=TRUE from gap.Rnw since it causes troubles
		Apply Sweave2knitr() to gap.Rnw and jss.Rnw and change gap.Rnw to gap.Rmd
		Document logp, log10p, log10pvalue, mhtplot2d, pvalue
		Imports: dplyr, ggplot2, plotly
		Suggests: htmlwidgets, rmarkdown
04-05-2021	Documentation through roxygen and suggests knitr
24-04-2021	Enable fig=TRUE in gap.Rnw to generate figures/reduce size of the package
23-04-2021	Revise gsmr() adding legend and Egger intercept
		Add cnvplot() trunc.mhtplot, and METAL_forestplot examples to gap.Rnw

Version 1.2.3-1
21-04-2021	Remove URL from hwe.cc.Rd and http --> https in CITATION

Version 1.2.3
20-04-2021	Remove (unused) # ftp:// from asplot after suggestion
19-04-2021	Revise log10pvalue() and mhtplot.trunc() on p values
17-04-2021	Simplify pvalue()
16-04-2021	Change arguments for qnorm() and fix a swapped UCL/LCL bug in gsmr()
14-04-2021	Add log10pvalue so as to enable mhtplot.trunc() to handle p, log10p, z
11-04-2021	Rework on mhtplot.trunc() to use Z so as to handle extremely small p values
		Drop qqman from suggests
10-04-2021	Relocate description on lsf.str() as Appendix and add library(gap) in gap.Rnw
09-04-2021	Add weighted.median(), mr.boot(), gsmr() which suggests metafor, cowplot
31-03-2021	Revise ESplot to use log(OR) as effect size, activate (...) option
22-03-2021	Add example for miamiplot in gap.Rnw
12-02-2021	Revise circos.cnvplot() excluding records with start>end
11-02-2021	Revise METAL_forestplot()
19-01-2021	Revise cs() to give the correct list of variants
10-01-2021	Revise ESplot() and therefore the vignette from Wendi's problem