@@ -62,8 +62,8 @@ METAL_forestplot        forest plot as R/meta's forest for METAL outputs
 makeRLEplot		make relative log expression plot
 mhtplot                 Manhattan plot
 mhtplot2                Manhattan plot with annotations
-mhtplot2d               2D Manhattan plot
-mhtplot3d               3D Manhattan plot
+pqtl2d                  2D pQTL plot
+pqtl3d                  3D pQTL plot
 mhtplot.trunc           truncated Manhattan plot
 miamiplot               Miami plot
 pedtodot                Converting pedigree(s) to dot file(s)
