@@ -19,7 +19,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    inv_chr_pos_a1_a2, invlogit, invnormal, ixy,
    KCC, k, klem, kin.morgan,
    LD22, LDkl, lambda1000, logit, log10p, log10pvalue, logp,
-   METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot2d, mhtplot3d, mhtplot.trunc, mht.control,
+   METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, pqtl2d, pqtl3d, mhtplot.trunc, mht.control,
         mia, miamiplot, micombine, mr.boot, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score, pvalue,
    qqfun, qqunif,
