@@ -1,4 +1,4 @@
-#' 2D Manhattan plot
+#' 2D pQTL plot
 #'
 #' @md
 #' @param d Data to be used.
@@ -21,14 +21,14 @@
 #' \dontrun{
 #' INF <- Sys.getenv("INF")
 #' d <- read.csv(file.path(INF,"work","INF1.merge.cis.vs.trans"),as.is=TRUE)
-#' r <- mhtplot2d(d)
+#' r <- pqtl2d(d)
 #' }
 
-mhtplot2d <- function(d, chrlen=gap::hg19, snp_name="SNP", snp_chr="Chr", snp_pos="bp",
-                      gene_chr="p.chr", gene_start="p.start", gene_end="p.end",
-                      protein="p.target.short", gene="p.gene", lp="log10p",
-                      cis="cis",
-                      plot=TRUE, cex=0.6)
+pqtl2d <- function(d, chrlen=gap::hg19, snp_name="SNP", snp_chr="Chr", snp_pos="bp",
+                   gene_chr="p.chr", gene_start="p.start", gene_end="p.end",
+                   protein="p.target.short", gene="p.gene", lp="log10p",
+                   cis="cis",
+                   plot=TRUE, cex=0.6)
 {
   r <- grid2d(chrlen, plot=plot)
   n <- with(r, n)
