@@ -98,8 +98,8 @@ makeRLEplot       \tab      make relative log expression plot\cr
 METAL_forestplot  \tab      forest plot as R/meta's forest for METAL outputs\cr
 mhtplot           \tab      Manhattan plot\cr
 mhtplot2          \tab      Manhattan plot with annotations\cr
-mhtplot2d         \tab      2D Manhattan plot\cr
-mhtplot3d         \tab      3D Manhattan plot\cr
+pqtl2d            \tab      2D pQTL plot\cr
+pqtl3d            \tab      3D pQTL plot\cr
 mhtplot.trunc     \tab      truncated Manhattan plot\cr
 miamiplot         \tab      Miami plot\cr
 pedtodot          \tab      Converting pedigree(s) to dot file(s)\cr
