@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/mhtplot2d.R
-\name{mhtplot2d}
-\alias{mhtplot2d}
-\title{2D Manhattan plot}
+% Please edit documentation in R/pqtl2d.R
+\name{pqtl2d}
+\alias{pqtl2d}
+\title{2D pQTL plot}
 \usage{
-mhtplot2d(
+pqtl2d(
   d,
   chrlen = gap::hg19,
   snp_name = "SNP",
@@ -54,12 +54,12 @@ mhtplot2d(
 positional information.
 }
 \description{
-2D Manhattan plot
+2D pQTL plot
 }
 \examples{
 \dontrun{
 INF <- Sys.getenv("INF")
 d <- read.csv(file.path(INF,"work","INF1.merge.cis.vs.trans"),as.is=TRUE)
-r <- mhtplot2d(d)
+r <- pqtl2d(d)
 }
 }
