@@ -1,13 +1,13 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/mhtplot3d.R
-\name{mhtplot3d}
-\alias{mhtplot3d}
-\title{3D Manhattan plot}
+% Please edit documentation in R/pqtl3d.R
+\name{pqtl3d}
+\alias{pqtl3d}
+\title{3D pQTL plot}
 \usage{
-mhtplot3d(d, chrlen = gap::hg19, zmax = 300)
+pqtl3d(d, chrlen = gap::hg19, zmax = 300)
 }
 \arguments{
-\item{d}{Data in mhtplot2d() format.}
+\item{d}{Data in pqtl2d() format.}
 
 \item{chrlen}{Lengths of chromosomes for specific build: hg18, hg19, hg38.}
 
@@ -17,14 +17,14 @@ mhtplot3d(d, chrlen = gap::hg19, zmax = 300)
 A plotly figure.
 }
 \description{
-3D Manhattan plot
+3D pQTL plot
 }
 \examples{
 
 \dontrun{
 INF <- Sys.getenv("INF")
 d <- read.csv(file.path(INF,"work","INF1.merge.cis.vs.trans"),as.is=TRUE)
-r <- mhtplot3d(d,zmax=300)
+r <- pqtl3d(d,zmax=300)
 htmlwidgets::saveWidget(r,file=file.path(INF,"INF1.latest.html"))
 r
 }
