@@ -3,12 +3,13 @@ Version history of the R genetic analysis package (R/gap)
 Version 1.2.3-2
 31-05-2021	Add shinygap
 		Rename h2 to h2_mzdz to resolve conflict with shiny/htmltools
-		Update mhtplot3d and rename old version as run3d to use .csv rather than .tsv
+		Update pqtl3d and rename old version as run3d to use .csv rather than .tsv
 		Replace gap.Rnw with gap.Rmd
 		Move plogp.Rmd and functions.Rmd here from pQTLtools and merge into gap.Rmd
 		Drop fig=TRUE from gap.Rnw since it causes troubles
 		Apply Sweave2knitr() to gap.Rnw and jss.Rnw and change gap.Rnw to gap.Rmd
-		Document logp, log10p, log10pvalue, mhtplot2d, pvalue
+		Document logp, log10p, log10pvalue, pqtl2d, pvalue
+		Rename mhtplot2d/3d as pqtl2d/3d
 		Imports: dplyr, ggplot2, plotly
 		Suggests: htmlwidgets, rmarkdown
 04-05-2021	Documentation through roxygen and suggests knitr
